# Failure-Atlas

./: .gitignore  AUTH_AND_AWS_AUDIT.md  ENV_SETUP_COMPLETE.md  ENV_VARIABLES_REFERENCE.md  GITHUB_OAUTH_IMPLEMENTATION.md  GITHUB_OAUTH_SETUP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_VARIABLES.md  STATUS.txt  index.mock.html
backend/: .env.example  DB_MAP_AND_MIGRATION_PLAN.md  README.md  REPO_MIGRATION_SUMMARY.md  requirements.txt
cli/: EXAMPLE_USAGE.md  README.md  pyproject.toml  requirements.txt
cli/.bugjournal/entries/: sample-bug.md  sample-feature.md  sample.md
cli/bugjournal/: __init__.py  api.py  cli.py  config.py  entries.py  main.py  utils.py
cli/bugjournal/commands/: __init__.py  init.py  new.py  push.py
cli/bugjournal_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: .env.example  BUGJOURNAL_REDESIGN.md  FINAL_SUMMARY.md  FRONTEND_SPEC.md  JOURNAL_AUTO_USER_CREATION.md  JOURNAL_CONNECTED_UX_REFINEMENT.md  JOURNAL_CONNECT_HARDENED.md  JOURNAL_ENTRIES_HARDENED.md  JOURNAL_PAGE_DYNAMIC.md  JOURNAL_PAGE_IMPLEMENTATION.md  JOURNAL_REPO_HEADER_FIX.md  JOURNAL_TABS_COMPLETE.md  JOURNAL_TABS_IMPLEMENTATION.md  JOURNAL_UX_RULES.md  LANDING_PAGE_RESTORED.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_PHASE1.md  MIGRATION_STATUS.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE3_4_COMPLETE.md  PHASE3_REMOVAL_LOG.md  PHASE4_BACKEND_INTEGRATION.md  PHASE4_ENDPOINT_MAPPING.md  PHASE_A_BACKEND_DISCOVERY.md  PHASE_C_MISSING_FEATURES_AUDIT.md  PRODUCT_FLOW_FIX.md  README.md  REDESIGN_SUMMARY.md  REDIRECT_AND_DEMO_REMOVAL.md  (+5 more)
(+29 files in other folders)
