[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugjournal-cli"
version = "0.1.0"
description = "Command-line interface for BugJournal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
bugjournal = "bugjournal.main:main"

[tool.setuptools]
packages = ["bugjournal"]

[tool.setuptools.package-data]
bugjournal = ["py.typed"]
